[package]
name = "dota2_api"
version = "0.2.3"
authors = ["Sam Bercx"]
repository = "https://github.com/sbxx/dota2_api"
documentation = "https://docs.rs/dota2_api/"
license = "MIT"
readme = "README.md"
description = "Rust client for the official Dota 2 web API"
keywords = ["dota2", "api"]

[dependencies]
hyper = "0.10"
serde = "0.9"
serde_json = "0.9"
serde_derive = "0.9"
